# Data-Structures-And-Algorithm-using-C

./: .gitignore  CMakeLists.txt  README.md  circularLinkedList - Sir.c  doublyLinkedList - Sir.c  mainMenu.c  sLL - EleminateDuplicate.c  sLL - Reverse.c  sLL - SoringinASC.c  singlyLinkedList - Sir.c
Linked Lists/: insert.c  linkedlist.h
Linked Lists/Counting/: countNodes.c
Linked Lists/Displaying/: display.c
Linked Lists/Inserting/: insertEnd.c
Linked Lists/Inserting/headerFiles/: insertEnd.h  insertStart.h
Matrix/: sparceMatrix.c
Sorting/: bubbleSort - Modified.c  bubbleSort.c  selectionSort.c
allSirPracticalFileCodes/: doublyLinkedList - Sir.c  sLL - Reverse.c  sLL - SoringinASC.c
doublyLinkedList/: mainMenuDDL.c
linkedLists/: delete.c  isNull.c  linkedlist.h
